--- a/index.html
+++ b/index.html
@@ -216,7 +216,9 @@
 <div class="glass rounded-lg p-5 glow" style="opacity: 1; transform: none;">
   <h3 class="text-sm font-medium mb-4">Payments</h3>
 
-      <button class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300 w-full" 
+  <div class="grid grid-cols-2 gap-4">
+    
+    <button class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300 w-full" 
             onclick="copyToClipboard('bc1qqfgr004dsutvl0hrj8qw5ndzed6c80zqrsmhjd')">
       <div class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden">
         <svg fill="currentColor" height="20" viewbox="0 0 24 24" width="20" xmlns="http://www.w3.org/2000/svg">
@@ -225,9 +227,8 @@
       </div>
       <span class="text-sm">BTC</span>
     </button>
-  </div>
 
-      <button class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300 w-full" 
+    <button class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300 w-full" 
             onclick="copyToClipboard('0x63fC44372E64fd4b2E60935e2ac6a3858a80D841')">
       <div class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden">
         <svg fill="currentColor" height="20" viewbox="0 0 24 24" width="20" xmlns="http://www.w3.org/2000/svg">
@@ -236,9 +237,8 @@
       </div>
       <span class="text-sm">ETH</span>
     </button>
-  </div>
 
-      <button class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300 w-full" 
+    <button class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300 w-full" 
             onclick="copyToClipboard('0x63fC44372E64fd4b2E60935e2ac6a3858a80D841')">
       <div class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden">
         <svg fill="currentColor" height="20" viewbox="0 0 24 24" width="20" xmlns="http://www.w3.org/2000/svg">
@@ -247,8 +247,7 @@
       </div>
       <span class="text-sm">USDT on ETH</span>
     </button>
-  </div>
-  
+
     <button class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300 w-full" 
             onclick="copyToClipboard('hatedisugly.ton')">
       <div class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden">
@@ -258,8 +257,8 @@
       </div>
       <span class="text-sm">TON</span>
     </button>
-  </div>
-</div>
+
+  </div> </div>
       <div class="text-center text-zinc-500 text-sm mt-4">
         <p>999 wrld.</p>
       </div>
