--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
 </head>
 
 <body class="__variable_d65c78 __variable_4bc053 bg-black text-white font-sans">
-  <body class="__variable_d65c78 __variable_4bc053 bg-black text-white font-sans">
   <div id="tsparticles" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;"></div>
 <div id="cursor-trail"></div>
   <!-- <video id="background-video" autoplay loop muted playsinline style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
@@ -494,35 +493,37 @@ document.addEventListener('DOMContentLoaded', function() {
     document.head.appendChild(style);
 });
 </script>
-    <div id="copy-toast" class="fixed bottom-10 left-1/2 -translate-x-1/2 glass px-6 py-3 rounded-full text-sm font-medium opacity-0 pointer-events-none transition-all duration-300 transform translate-y-2 z-50">
+<script>
+function copyToClipboard(text) {
+  console.log("Copying address:", text); // This helps us debug
+
+  navigator.clipboard.writeText(text).then(() => {
+    const toast = document.getElementById('copy-toast');
+    
+    if (toast) {
+      // Show the toast
+      toast.classList.remove('opacity-0', 'translate-y-2', 'pointer-events-none');
+      toast.classList.add('opacity-100', 'translate-y-0');
+
+      // Hide it after 2.5 seconds
+      setTimeout(() => {
+        toast.classList.add('opacity-0', 'translate-y-2', 'pointer-events-none');
+        toast.classList.remove('opacity-100', 'translate-y-0');
+      }, 2500);
+    } else {
+      console.error("Popup element 'copy-toast' not found in HTML!");
+    }
+  }).catch(err => {
+    console.error('Failed to copy!', err);
+  });
+}
+</script>
+    <div id="copy-toast" class="fixed bottom-10 left-1/2 -translate-x-1/2 glass px-6 py-3 rounded-full text-sm font-medium opacity-0 pointer-events-none transition-all duration-300 transform translate-y-2 z-[9999] glow">
   Address Copied!
 </div>
 </body>
 
 </html>
-<script>
-function copyToClipboard(text) {
-  // 1. Copy to clipboard
-  navigator.clipboard.writeText(text).then(() => {
-    
-    // 2. Get the toast element
-    const toast = document.getElementById('copy-toast');
-
-    // 3. Show the toast
-    toast.classList.remove('opacity-0', 'translate-y-2', 'pointer-events-none');
-    toast.classList.add('opacity-100', 'translate-y-0');
-
-    // 4. Hide it after 2.5 seconds
-    setTimeout(() => {
-      toast.classList.add('opacity-0', 'translate-y-2', 'pointer-events-none');
-      toast.classList.remove('opacity-100', 'translate-y-0');
-    }, 2500);
-
-  }).catch(err => {
-    console.error('Failed to copy: ', err);
-  });
-}
-</script>
 <script>
   document.addEventListener('DOMContentLoaded', () => {
     async function fetchLanyard() {
